--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
-    "deploy": "set port=80 & bash deploy.sh"
+    "deploy": "bash deploy.sh"
   },
   "dependencies": {
     "compression": "^1.7.1",
